<?xml version="1.0"?>
<package format="2">
  <name>leader_follower</name>
  <version>1.0.0</version>
  <description>The leader_follower package</description>

  <maintainer email="petrivi2@fel.cvut.cz">Vit Petrik</maintainer>
 
  <license>BSD 3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>mrs_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>mrs_lib</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
